Refactored test file lookup.